--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,3 +1,4 @@
+/*
 * {
     padding: 0;
     margin: 0;
@@ -264,6 +265,7 @@ ul{
 .footer{
   background-color: #24262b;
     padding: 70px 0;
+    margin-left:25%;
 }
 .footer-col{
    width: 25%;
@@ -360,4 +362,4 @@ ul{
     background-color: transparent;
     border-bottom:1px solid rgba(255,255,255,.5);
     transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  }
+  }*/
